Ask user for a file when a File Layer doesn't exist

TODO: we need to be able to check whether we are running inside
      of a calligraconverter or in a gui mode. Firing up message boxes
      might not be the best idea for a calligraconverter :(

BUG:333326
CCMAIL:kimageshop@kde.org