krita/ui/kis_doc2.cc
@@ -251,7 +251,7 @@ QDomDocument KisDoc2::saveXML()
 
     root.appendChild(m_d->kraSaver->saveXML(doc, m_d->image));
     if (!m_d->kraSaver->errorMessages().isEmpty()) {
-        setErrorMessage(m_d->kraLoader->errorMessages().join(".\n"));
+        setErrorMessage(m_d->kraSaver->errorMessages().join(".\n"));
     }
 
     return doc;
